BuddyPress.org: Remove bottom padding on `commentlist li` elements. Fixes extraneous whitespace in hierarchical comment lists.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@653 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bb-base/style.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style.css
@@ -773,7 +773,7 @@ img.centered {
 }
 .commentlist li {
 	margin: 15px 0 10px;
-	padding: 5px 5px 10px 10px;
+	padding: 5px 5px 0 10px;
 	list-style: none;
 	font-weight: bold;
 	position: relative;
